force-app/main/default/objects/AAO_Created_Row__c/AAO_Created_Row__c.object-meta.xml
<CustomObject>
    <description>THE CREATE-LEG RECORD, twenty-first stamp item 6, shipped with the resolution-stage rebuild per the twenty-seventh. One row per org record the machine created - a Contact minted from a roster participant or a resolved mention - because A MACHINE-CREATED ROW WE CANNOT ENUMERATE IS A ROW WE CAN NEVER DISOWN. This is the watermark law reaching creation: the enumeration that makes &quot;which rows did we put in this org, and which do we now disown&quot; a query rather than archaeology. Machine-created org data is marked and reported through this record, never deleted by us: deleting a row someone may have since touched is the destructive move this build has refused repeatedly, so mark-and-report is the honest disposition. First row: Dan Lewis, created 8 August 2026 through the roster-participant leg ahead of this record, back-filled by the ruling that shipped it.</description>
    <label>AAO Created Row</label>
    <nameField>
        <displayFormat>MK-{00000000}</displayFormat>
        <label>AAO Created Row Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AAO Created Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>