force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Disowned__c.field-meta.xml
<CustomField>
    <fullName>AAO_Disowned__c</fullName>
    <description>Marked where we no longer stand behind the created row. The row itself is never deleted by us - a human holding facts we do not have decides that - so disowning is a mark and a report, and this checkbox is the mark.</description>
    <label>Disowned</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>