force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Disowned_Because__c.field-meta.xml
<CustomField>
    <fullName>AAO_Disowned_Because__c</fullName>
    <description>Why the created row is disowned, required at disowning and never blank.</description>
    <label>Disowned Because</label>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>