force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Leg__c.field-meta.xml
<CustomField>
    <fullName>AAO_Leg__c</fullName>
    <description>Which create-capable path made the row: roster-participant (AAO_Identity rung 4, the leg that created Dan Lewis) or mentioned-person (the resolution stage&apos;s ladder-zero leg). Named so the record can answer which mechanism to switch off if one of them starts minting wrong rows.</description>
    <label>Leg</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>