force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Reason__c.field-meta.xml
<CustomField>
    <fullName>AAO_Reason__c</fullName>
    <description>Why the row was created, in the creating leg's own words: which ladder rungs returned zero, what parsed, what the toggle said. Required at creation and never blank, for the same reason a retirement carries its reason.</description>
    <label>Reason</label>
    <type>LongTextArea</type>
    <length>4096</length>
</CustomField>