force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Run_Key__c.field-meta.xml
<CustomField>
    <fullName>AAO_Run_Key__c</fullName>
    <description>The run whose pass created the row, where one exists. Nullable for the back-filled first row.</description>
    <label>Run Key</label>
    <length>64</length>
    <type>Text</type>
</CustomField>