force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Source__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source__c</fullName>
    <description>The Source whose evidence prompted the creation, where one exists. Nullable: the back-filled first row predates the record.</description>
    <label>Source</label>
    <referenceTo>AAO_Source__c</referenceTo>
    <relationshipLabel>Created Rows</relationshipLabel>
    <relationshipName>Created_Rows</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>