force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Source_Form__c.field-meta.xml
<CustomField>
    <fullName>AAO_Source_Form__c</fullName>
    <description>The words the creation was parsed from, exactly as the source carried them - a roster string or a transcript designator. The ASR-name hazard lives here: a mentioned name is what a transcriber heard, and this field is what lets a human compare the created row against what was actually said.</description>
    <label>Source Form</label>
    <type>Text</type>
    <length>255</length>
</CustomField>