force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Target_Id__c.field-meta.xml
<CustomField>
    <fullName>AAO_Target_Id__c</fullName>
    <description>The 18-character Id of the org record the machine created. A text field rather than a lookup on purpose: a lookup to Contact would null out if an admin merged or removed the row, and this record must keep saying what we created even after the target is gone.</description>
    <externalId>true</externalId>
    <label>Target Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>