force-app/main/default/objects/AAO_Created_Row__c/fields/AAO_Target_Object__c.field-meta.xml
<CustomField>
    <fullName>AAO_Target_Object__c</fullName>
    <description>The API name of the object the created row lives on. Contact today; the enumeration must survive a second create-capable path without a schema change.</description>
    <label>Target Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>